--- a/Spaceshooter/Spaceshooter.vcxproj.filters
+++ b/Spaceshooter/Spaceshooter.vcxproj.filters
@@ -37,6 +37,30 @@
     <Filter Include="Source Files\Game\Scenes">
       <UniqueIdentifier>{45da5594-e191-4fb0-8e70-8554ba58d34c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Engine\Debug">
+      <UniqueIdentifier>{c0862bc8-171d-41f8-9216-f9d2220b7f03}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Engine\Misc">
+      <UniqueIdentifier>{97b14d70-5ac9-4857-bd15-e51e46d183b5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Engine\Debug">
+      <UniqueIdentifier>{ff7664e1-4089-40e1-800b-71b18a395962}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Engine\Misc">
+      <UniqueIdentifier>{539ce72a-e441-4d6e-b648-91a44d69ab35}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Engine\SceneManagement">
+      <UniqueIdentifier>{1767ad5b-dc8f-4730-a148-652f7b5317ce}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Engine\SceneManagement">
+      <UniqueIdentifier>{74ea082c-e4e0-49f9-ada5-03c000397711}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Engine\Components">
+      <UniqueIdentifier>{61886fb1-57b8-41db-92fb-f5c4fc211c2b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Engine\Components">
+      <UniqueIdentifier>{797b461e-94e4-41dc-bab1-876b7936b886}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp">
@@ -72,20 +96,29 @@
     <ClCompile Include="Gameloop.cpp">
       <Filter>Source Files\Engine</Filter>
     </ClCompile>
-    <ClCompile Include="Scene.cpp">
-      <Filter>Source Files\Engine</Filter>
-    </ClCompile>
-    <ClCompile Include="UUID.cpp">
-      <Filter>Source Files\Engine</Filter>
-    </ClCompile>
     <ClCompile Include="Scene_Level1.cpp">
       <Filter>Source Files\Game\Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="SceneManager.cpp">
-      <Filter>Source Files\Engine</Filter>
-    </ClCompile>
     <ClCompile Include="Logging.cpp">
-      <Filter>Source Files\Engine</Filter>
+      <Filter>Source Files\Engine\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneManager.cpp">
+      <Filter>Source Files\Engine\SceneManagement</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene.cpp">
+      <Filter>Source Files\Engine\SceneManagement</Filter>
+    </ClCompile>
+    <ClCompile Include="UUID.cpp">
+      <Filter>Source Files\Engine\Misc</Filter>
+    </ClCompile>
+    <ClCompile Include="Entity.cpp">
+      <Filter>Source Files\Engine\Misc</Filter>
+    </ClCompile>
+    <ClCompile Include="Component.cpp">
+      <Filter>Source Files\Engine\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>Source Files\Engine\Components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -128,20 +161,29 @@
     <ClInclude Include="Global.h">
       <Filter>Header Files\Engine</Filter>
     </ClInclude>
-    <ClInclude Include="Logging.h">
-      <Filter>Header Files\Engine</Filter>
-    </ClInclude>
-    <ClInclude Include="Scene.h">
-      <Filter>Header Files\Engine</Filter>
-    </ClInclude>
-    <ClInclude Include="UUID.h">
-      <Filter>Header Files\Engine</Filter>
-    </ClInclude>
     <ClInclude Include="Scene_Level1.h">
       <Filter>Header Files\Game\Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="Logging.h">
+      <Filter>Header Files\Engine\Debug</Filter>
+    </ClInclude>
     <ClInclude Include="SceneManager.h">
-      <Filter>Header Files\Engine</Filter>
+      <Filter>Header Files\Engine\SceneManagement</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>Header Files\Engine\SceneManagement</Filter>
+    </ClInclude>
+    <ClInclude Include="UUID.h">
+      <Filter>Header Files\Engine\Misc</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity.h">
+      <Filter>Header Files\Engine\Misc</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Header Files\Engine\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>Header Files\Engine\Components</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
