--- a/Spaceshooter/Spaceshooter.vcxproj.filters
+++ b/Spaceshooter/Spaceshooter.vcxproj.filters
@@ -108,11 +108,23 @@
     <ClCompile Include="Scene.cpp">
       <Filter>Source Files\Engine\SceneManagement</Filter>
     </ClCompile>
-    <ClCompile Include="UUID.cpp">
-      <Filter>Source Files\Engine\Identifiers</Filter>
-    </ClCompile>
     <ClCompile Include="Identifiable.cpp">
       <Filter>Source Files\Engine\Identifiers</Filter>
+    </ClCompile>
+    <ClCompile Include="Component.cpp">
+      <Filter>Source Files\Engine\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>Source Files\Engine\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Component_Transform.cpp">
+      <Filter>Source Files\Engine\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentRegistry.cpp">
+      <Filter>Source Files\Engine\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene_Level2.cpp">
+      <Filter>Source Files\Game\Scenes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -167,11 +179,23 @@
     <ClInclude Include="Scene.h">
       <Filter>Header Files\Engine\SceneManagement</Filter>
     </ClInclude>
-    <ClInclude Include="UUID.h">
-      <Filter>Header Files\Engine\Identifiers</Filter>
-    </ClInclude>
     <ClInclude Include="Identifiable.h">
       <Filter>Header Files\Engine\Identifiers</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Header Files\Engine\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>Header Files\Engine\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Component_Transform.h">
+      <Filter>Header Files\Engine\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentRegistry.h">
+      <Filter>Header Files\Engine\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene_Level2.h">
+      <Filter>Header Files\Game\Scenes</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
