--- a/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj.filters
+++ b/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj.filters
@@ -85,6 +85,12 @@
     <Filter Include="Header Files\Engine\CollisionManagement">
       <UniqueIdentifier>{bc15455f-60f8-43a0-8738-bc0c12778f3b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Game\Components">
+      <UniqueIdentifier>{d4879036-a359-4ef9-9cc7-c164f533b7e4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Game\Components">
+      <UniqueIdentifier>{2fe27e2a-4535-4c15-b136-39c180000078}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp">
@@ -176,6 +182,12 @@
     </ClCompile>
     <ClCompile Include="CollisionManager.cpp">
       <Filter>Source Files\Engine\CollisionManagement</Filter>
+    </ClCompile>
+    <ClCompile Include="Component_Test.cpp">
+      <Filter>Source Files\Game\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Component_Animator.cpp">
+      <Filter>Source Files\Engine\Components\IndividualComponents</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -271,6 +283,12 @@
     </ClInclude>
     <ClInclude Include="CollisionManager.h">
       <Filter>Header Files\Engine\CollisionManagement</Filter>
+    </ClInclude>
+    <ClInclude Include="Component_Test.h">
+      <Filter>Header Files\Game\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Component_Animator.h">
+      <Filter>Header Files\Engine\Components\IndividualComponents</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
