--- a/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj
+++ b/Spaceshooter/Spaceshooter/Spaceshooter.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="gametimer.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Logging.cpp" />
+    <ClCompile Include="MainCamera.cpp" />
     <ClCompile Include="mydrawengine.cpp" />
     <ClCompile Include="myinputs.cpp" />
     <ClCompile Include="mysoundengine.cpp" />
@@ -203,6 +204,7 @@
     <ClInclude Include="Global.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Logging.h" />
+    <ClInclude Include="MainCamera.h" />
     <ClInclude Include="mydrawengine.h" />
     <ClInclude Include="myinputs.h" />
     <ClInclude Include="mysoundengine.h" />
